feat: enhance Data Quality Task to correct judgment hearing dates and improve parallel processing